--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,6 +11,8 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: row;
+    height: 80px;
+  
   }
   
   
@@ -20,6 +22,9 @@
     color: #5dda9a;
     display: flex;
     text-decoration: none;
+    border-radius: 2px;
+    border-color: #5dda9a;
+    
   }
   
   .navbar-brand img {
@@ -84,3 +89,8 @@
     background-color: palegreen;
   }
   
+  .navbar-container{
+    border: #5dda9a;
+    border-radius: 2px;
+    text-align: center;
+  }
