--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: row;
     height: 80px;
+    width: 100%;
   
   }
   
@@ -80,12 +81,13 @@
     text-align: center;
   }
   .navbar-nav .nav-link img{
-    height: 25px;
-    margin-left: 300px;
+    height: 30px;
+    margin-left: 200px;
     gap: 1px;
+    width: 20%;
 
   }
-  .navbar-nav .nav-link product, story, manufacturing, packazine{
+  .NavDropdown product, story, manufacturing, packazine{
     background-color: palegreen;
   }
   
@@ -94,3 +96,15 @@
     border-radius: 2px;
     text-align: center;
   }
+  button.v3{
+  background-color: #4CAF50; 
+    color: white;
+    border: 1px solid grey;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    cursor: pointer;
+    border-radius: 5px;
+  
+}
