--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -7,6 +7,7 @@ width: 100%; */
     /* margin-top: 25px; */
     width: 100%;
     justify-content: space-between;
+    /* background-color:lightpink; */
 
 
 }
@@ -32,8 +33,10 @@ width: 100%; */
 .container-right img {
 
 
-    height: 550px;
+    height: 500px;
     margin-left: 200px;
+    /* margin-top: 10px; */
+    border-radius: 25px;
 
 
 }
@@ -47,14 +50,20 @@ width: 100%; */
     font-size: 24px;
     color: #333;
     margin-top: 40px;
-    margin-left: 40px;
+    display: flex;
+    /* margin-left: 10px; */
 
 }
 
 h1 {
-    font-family: 18px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bolder;
     margin-left: 40px;
+}
+.u1 h2{
+    margin-left: 45px;
+    font-weight: bolder;
+
 }
 
 .line2 {
@@ -64,10 +73,18 @@ h1 {
     margin-left: 40px;
 
 }
+.line-left{
+    color: #398336;
+}
+.line-right{
+    color: #85c125;
+    margin-left: 0px;
+    
+}
 
 button {
     background-color: #4CAF50;
-    color: white;
+    color: #ffffff;
     border: none;
     padding: 10px 20px;
     text-align: center;
@@ -83,6 +100,7 @@ button {
 button.v1 {
     background-color: #4CAF50;
     margin-top: 10px;
+    width: 150px;
 }
 
 button.v2 {
@@ -141,10 +159,32 @@ button.v2:hover {
         transform: translateX(0); 
       }
       100% {
-        transform: translateX(100vw);
+        transform: translateX(100%);
       }
     
 }
 .box:hover{
    animation-play-state: paused;
+}
+
+.jx img{
+    display: flex;
+    justify-items: center;
+    align-items: center   ;
+    height: 90px;
+    margin-left: 400px;
+    margin-top: 100px;
+    animation: vox  15s linear infinite;
+ 
+
+}
+@keyframes vox {
+    0%{
+        transform:translateX(0%);
+    }
+    100%{
+        transform: translateX(100%);
+    }
+
+    
 }
