--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -8,22 +8,25 @@ footer{
 
 .container4{
     border: 1px solid hsl(0, 0%, 2%);
-    background-color:black;
+    background-color:#0c0b0b;
     width: 100%;
-    height: 1%;
-    margin-top: 200px;
-    /* margin-left: 5px;
-    margin-right: 5px; */}
     
- /* Footer{
-    background-color: #070606;
-    border: 1px solid black;
- } */
+    /* margin-top: 200px; */
+}
+ .footer-content2 img{
+    border-radius: 25px;
+    margin-top: 60px;
+    width: 650px;
+    margin-right: 120px;
+}
+.footer-content3 h1{
+    margin-left: 500px;
+}
 
 .footer-content{
     display: flex;
     flex-direction: row;
-    background-color: #090909;
+    background-color: #080707;
     color: hwb(0 91% 7%);
     margin-top: 20px;
     justify-content: space-between;
@@ -35,30 +38,34 @@ footer{
     color: blueviolet;
 
 }
+h5{
+    margin-top: 20px;
+    row-gap: 20px;
+
+}
 
 h4{
     display: grid;
     flex-direction: row;
+    margin-left: 30px;
 }
 
 .footer-content2{
     color: hsl(240, 24%, 96%);
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+  
 
 }
 h2{
     display: grid;
     flex-direction: row;
-    justify-content: space-between;
-    margin-right: 30px;
-   margin-left: 30px;
+   margin-left: 15px;
    margin-top: 50px;
 }
 p{
     font-size: 15px;
- justify-content: space-between;
+ 
     }
 .footer-content3{
 
@@ -70,20 +77,20 @@ p{
 }
 
 h1{
-    /* display: flex;
-    flex-direction: row; */
+    
     font-size: 65px;
 }
-/* p{
-    justify-items: center;
-} */
 
-hr{
-    color: rgb(11, 90, 159);
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    
-    margin-right: auto;
-    border-style: inset;
-    font-size: 10px;
+.line3{
+    font-size: 17px;
 }
+ .footer-content2 h3{
+    margin-top: 60px;
+    
+ }
+ h3:hover{
+    color: burlywood;
+ }
+ h2:hover{
+    color: burlywood;
+ }
