--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -11,7 +11,9 @@ footer{
     background-color:#0c0b0b;
     width: 100%;
     
-    /* margin-top: 200px; */
+    /* height: 500px; */
+    
+    margin-top: 100px;
 }
  .footer-content2 img{
     border-radius: 25px;
@@ -93,4 +95,12 @@ h1{
  }
  h2:hover{
     color: burlywood;
+ }
+ li{
+    font-size: 20px;
+    margin-top: 10px;
+ }
+
+ .footer-content3 h1:hover{
+    color: #398336;
  }
