--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,22 +1,23 @@
 .contact-info{
 
     border: 2px solid white;
-    background-color:black;
+    background-color: #9ef0b7;
     margin-left: 200px;
     margin-right: 200px; 
      margin-bottom: 0%;
     border-radius: 30px; 
     height: 500px;
+    margin-top: 50px;
     /* justify-content: space-between;
     margin-top: 20px; */
 }
  .contact-info h1{
   margin-top: 20px;
   margin-left: 330px;
-  color: white;
+  color: #060606;
 }
 .contact-container{
-  color: white;
+  color: rgb(8, 7, 7);
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -32,16 +33,17 @@
 
  
   height: 20px;
-  color: white;
+  color: rgb(20, 19, 19);
 }
 .contact-container a{
-  color: white;
-  height: 20px;
+  color: rgb(13, 13, 13);
+  height: 15px;
   gap: 40px;
 }
 
-.contact-info h1{
+.contact-info h1:hover{
     /* margin-left: 200px; */
+    color: hsl(47, 82%, 20%);
 
 }
 
