Best selling animation

--- a/src/components/bestproduct/Best_Selling.css
+++ b/src/components/bestproduct/Best_Selling.css
@@ -24,3 +24,10 @@
 .selling img{
     height: 100px;
 }
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
