--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -165,19 +165,18 @@ button.v2:hover {
 .box:hover{
    animation-play-state: paused;
 }
-
-.jx img{
+ .jx img{
     display: flex;
     justify-items: center;
     align-items: center   ;
     height: 90px;
     margin-left: 400px;
     margin-top: 100px;
-    animation: vox  15s linear infinite;
+    animation: vox  15s linear infinite; 
  
 
-}
-@keyframes vox {
+} 
+ @keyframes vox {
     0%{
         transform:translateX(0%);
     }
@@ -187,3 +186,6 @@ button.v2:hover {
 
     
 }
+.cx{
+    display: flex;
+} 
