--- a/src/components/products/Our_Products.css
+++ b/src/components/products/Our_Products.css
@@ -1,12 +1,14 @@
 .our_products h1{
     margin-top: 80px;
-    margin-left: 450px;
+    margin-left: 525px;
+    margin-right: 450px;
+    /* justify-content: center;
     
-    align-items: center;
+    align-items: center; */
 }
 .our_products{
     width: 100%;
 }
-.item{
+/* .item{
     width: 90%;
-}
+} */
