--- a/src/components/ProductPage.css
+++ b/src/components/ProductPage.css
@@ -69,6 +69,9 @@
     margin-right: 200px;
     margin-top: 50px;
     animation: infinite cox 10s linear;
+} h1{
+    font-size: 40px;
+    height: 80px;
 }
 @keyframes cox {
     0% {
