--- a/src/components/news/News.css
+++ b/src/components/news/News.css
@@ -15,6 +15,12 @@
     
     
 }
+/* form{
+    margin-left: 0;
+    display: flex;
+    gap: 5px;
+    justify-content: space-between;
+} */
 .news-left{
     height: 150px;
     
@@ -23,7 +29,8 @@
     margin-top: 30px;
 }
 .news-left form{
-    margin-left: 50px;
+    display: flex;
+    /* margin-left: 50px; */
     margin-top: 30px;
     gap: 0px;
     border-radius: 25px;
@@ -34,13 +41,14 @@
 .b1{ height: 40px;
     background-color: #b4eec7;
     border-radius: 40px;
+    margin-left: 0;
 
 }
 .b2{
     height: 40px;
     background-color: rgb(11, 167, 42);
     border-radius: 40px;
-    width: 80px;
+    width: 130px;
 }
 .news-right{
     margin-left: 150px;
